# TRSM-pheno-study

./: 123-321.ini  2dBR.py  2dPlotter.py  2dPlotterBR.py  2dPlotterLimitTest.py  Atlas2023Limits.json  Atlas2023Limits.tsv  Atlas2023Limits_BP2lessThanOrEqualTo.tsv  AtlasLimitModified.py  MatplotlibStyles.json  README.md  TRSMBroken_regionTesting.ini  configurer.py  convertJSON2TSV.py  example.ini  functions.py  oneD_AtlasLimits.py  oneD_NPbbgamgam.py  oneD_ownGrid.py  oneD_ownGridCompile.py  oneD_ownGridPlot.py  parameterChecker.py  parameterData.py  parameterPlotter.py  regionTesting.sh  regionTesting.tsv  regionTesting2.py  regionTesting4.py  regionTestingFunctions.py  requirements.txt  tempCleaning  testing.py  theory.py  twoDPlotter.py  twoD_AtlasLimits.py  twoD_AtlasLimitsMax.py  twoD_AtlasLimitsMaxCompile.py  twoD_AtlasLimitsMaxPlot.py  twoD_AtlasLimitsMaxPlotDistribution.py  twoD_Exclusion.py  (+9 more)
AtlasLimits/: README.md  twoD_AtlasLimits_plot.py
AtlasLimitsBenchmarkplanes/: AtlasLimitsBenchmarkplanes.tsv  README.md  oneD_AtlasLimBPs_configure.py  oneD_AtlasLimBPs_plot.py  twoD_AtlasLimBPs_configure.py  twoD_AtlasLimBPs_plot.py
AtlasLimitsGridSearch/: AtlasLimitsGridSearchMax.tsv  README.md  twoD_AtlasLimGS_compile.py  twoD_AtlasLimGS_configure.py  twoD_AtlasLimGS_dist_plot.py  twoD_AtlasLimGS_plot.py  twoD_AtlasLimGS_survivedConstr_plot.py
Benchmarkplanes/: README.md  sanityCheck.py  sanityCheck2.py  (+10 more)
helpScannerS/: pyproject.toml
helpScannerS/helpScannerS/: Exclusion_functions.py  __init__.py  configurer.py  functions.py  parameterData.py  twoDPlotter.py
(+390 files in other folders)
