[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
authors = [
	{name = "Iram Haque", email = "throw7146@gmail.com"},
	{email = "irtiza.hayder.iram.haque@cern.ch"},
]
requires-python = ">= 3.9"
name = "helpScannerS"
version = "0.0.1"
dependencies = [
	"scipy==1.6.2",
	"numpy==1.22.4",
	"pandas==2.2.0",
	"matplotlib==3.8.3",
	"matplotlib-inline==0.1.5",
	"mplhep==0.3.32",
	"mplhep-data==0.0.3"
]
